Fix autocomplete visibility, accessibility issues

--- a/src/atoms/forms/AutoComplete/autocomplete.scss
+++ b/src/atoms/forms/AutoComplete/autocomplete.scss
@@ -12,6 +12,7 @@
         padding: 0;
         position: absolute;
         width: 100%;
+        z-index: 1000;
 
         li {
             background: white;
